--- a/obsmidicontroller/config_default.yaml
+++ b/obsmidicontroller/config_default.yaml
@@ -16,7 +16,23 @@ controllers:
           name: "Scenes, Transitions, and Soundboard"
           notes:
             scenes: [8,9,10,11,12,13,14]
-            transitions: [16,17,18,19,20,21,22,23]
+            transitions: 
+              -
+                id: 16
+              -
+                id: 17
+              -
+                id: 18
+                name: "cu318Stinger"
+              -
+                id: 19
+                name: "SpinCU318Stinger"
+              -
+                id: 20
+              -
+                id: 21
+              -
+                id: 22
             recording: [15]
             streaming: [23]
           soundboard:
@@ -91,7 +107,41 @@ controllers:
         transitions:
           name: "Transition Controls"
           notes:
-            transitions: [8,9,10,11,12,13,14,16,17,18,19,20,21,22,23]
+            transitions: 
+              -
+                id: 8
+              -
+                id: 9
+              -
+                id: 10
+                name: "cu318Stinger"
+              -
+                id: 11
+                name: "SpinCU318Stinger"
+              -
+                id: 12
+              -
+                id: 13
+              -
+                id: 14
+              -
+                id: 15
+              -
+                id: 16
+              -
+                id: 17
+              -
+                id: 18
+              -
+                id: 19
+              -
+                id: 20
+              -
+                id: 21
+              -
+                id: 22
+              -
+                id: 23
         macros:
           name: "Macros"
           macros:
